syntax = "proto3";
// 定义包名
package proto;

import "cloudevents.proto";

option csharp_namespace = "CloudNative.CloudEvents.V1";
option go_package = "cloudevents.io/genproto/v1";
option java_package = "io.cloudevents.v1.proto";
option java_multiple_files = true;
option php_namespace = "Io\\CloudEvents\\V1\\Proto";
option ruby_package = "Io::CloudEvents::V1::Proto";

// CloudEvent存储服务
service Store {
  rpc Store (io.cloudevents.v1.CloudEvent) returns (CloudEventStoreResult) {}
  rpc ReStore (io.cloudevents.v1.CloudEvent) returns (CloudEventStoreResult) {}
}

// KV服务
service KV {
  rpc Get (KVGet) returns (CloudEventResponse) {}
}

message KVGet{
  bytes key = 1;
}

// 订阅服务
service Subscription {
  rpc Subscribe (SubscribeRequest) returns (stream CloudEventResponse) {}
}

message SubscribeRequest{
  optional string type = 1;
  optional string event_type = 2;
  optional uint64 offset = 3;
}

message CloudEventResponse{
  uint64 offset = 1;
  io.cloudevents.v1.CloudEvent event = 2;
}

message CloudEventStoreResult {
  string message = 1;
}
